--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <header>
         <div id="logo"></div>
-        <div id="nalist"></div>
+        <div id="navlist">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
         <button id="signing">Sign In</button>
     </header>
 </body>
